<resources>
    <string name="app_name" translatable="false">Awery</string>
    <string name="repo" translatable="false">MrBoomDeveloper/Awery</string>
    <string name="preference_file_key" translatable="false">aweryprefs</string>
    <string name="discord" translatable="false">https://mrboomdev.ru</string>
    <string name="github" translatable="false">https://github.com/MrBoomDeveloper/Awery</string>
    <string name="sad" translatable="false">X(</string>
    <string name="oh" translatable="false">:o</string>
    <string name="colon" translatable="false">" : "</string>
    <string name="slogan">The NEW Best Anime &amp; Manga app for Android.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="japanese">Japanese</string>
    <string name="chinese">Chinese</string>
    <string name="global_excluded_tags">Globally Exclude Tags</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string-array name="sort_by">
        <item>Score</item>
        <item>Popular</item>
        <item>Trending</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>What?</item>
    </string-array>
    <string name="genre">Genre</string>
    <string name="top_score">Top Score</string>
    <string name="updated">Recently Updated</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="trending_novel">Trending Novel</string>
    <string name="popular_manga">Popular Manga</string>
    <string name="username">Username</string>
    <string name="chapters_read">"Chapters Read "</string>
    <string name="episodes_watched">"Episodes Watched "</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>
    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="notifications">Notifications</string>
    <string-array name="keys">
        <item>Reading</item>
        <item>Watching</item>
        <item>Completed</item>
        <item>Paused</item>
        <item>Dropped</item>
        <item>Planning</item>
        <item>Favourites</item>
        <item>Rewatching</item>
        <item>Rereading</item>
        <item>All</item>
    </string-array>
    <string-array name="status" translatable="false">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_anime" translatable="false">
        <item>PLANNING</item>
        <item>WATCHING</item>
        <item>COMPLETED</item>
        <item>RE-WATCHING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_manga" translatable="false">
        <item>PLANNING</item>
        <item>READING</item>
        <item>COMPLETED</item>
        <item>RE-READING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix" translatable="false">" / 10"</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="roles">Roles</string>
    <string name="details">Details</string>
    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
    <string name="wrong"><u>Wrong Title?</u></string>
    <string name="source_not_found">
        Couldn\'t find anything X( \n
        Try another source.
    </string>
    <string name="not_supported">%1$s is not supported!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="filler">Filler</string>
    <string name="adult">Adult</string>
    <string name="list_only">List Only</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="synonyms">Synonyms</string>
    <string name="trailer">Trailer</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="anilist_settings">Anilist Settings</string>
    <string name="extension_settings">Extensions</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="extensions">Extensions</string>
    <string name="player_settings">Player Settings</string>
    <string name="player">Player</string>
    <string name="reader">Reader</string>
    <string name="recentlyListOnly">Only show My Shows in Recently Updated</string>
    <string name="download_manager_select">Download Manager</string>
    <string name="downloadInSd">Download in SD card</string>
    <string name="noSdFound">No SD card was Found.</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="default_source">Default Source</string>
    <string name="show_yt">Show Youtube Link</string>
    <string name="default_ep_view">Default Episode Layout</string>
    <string name="default_chp_view">Default Chapter Layout</string>
    <string name="ui">User Interface</string>
    <string name="common">Common</string>
    <string name="theme">Theme</string>
    <string name="ui_settings">UI Settings</string>
    <string name="about">About</string>
    <string name="desc">"    Awery is crafted from the ashes of Saikou and based on simplistic yet state-of-the-art elegance. It is an Anilist only client, which also lets you stream-download Anime through extensions &amp; Manga.\nAwery literally means the \"best of the best\" in japanese. Well, we would like to say this is the best open source app for anime and manga on Android, what would you say?"</string>
    <string name="devs">Developers</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="full_disclaimer">
         - Awery by itself only provides an anime and manga tracker and does not provide any anime or manga streaming or downloading capabilities.
        \n\n - Awery or any of its developer/staff don\'t host any of the content found inside Awery. Any and all images and anime/manga information found in the app are taken from various public APIs (AniList, MyAnimeList, Kitsu).
        \n\n - Furthermore, all of the anime/manga links found in Awery are taken from various 3rd party plugins and have no affiliation with Awery or its staff.
        \n\n - Awery or it\'s owners aren\'t liable for any misuse of any of the contents found inside or outside of the app and cannot be held accountable for the distribution of any of the contents found inside the app.
        \n\n - By using Awery, you comply to the fact that the developer of the app is not responsible for any of the contents found in the app. You also agree to the fact that you may not use Awery to download or stream any copyrighted content.
        \n\n - If the internet infringement issues are involved, please contact the source website. The developer does not assume any legal responsibility.
    </string>
    <string name="version_current">Version %1$s</string>
    <string-array name="tips">
        <item>You can Long Click an episode/chapter to Mark it as Read.</item>
        <item>Long Clicking Shows can directly open List Editor.</item>
        <item>There are few more easter eggs hidden in the App.</item>
        <item>Challenge: Go to the very bottom of the Popular Anime &amp; Manga</item>
        <item>Try Long Clicking the Show\'s Title.</item>
        <item>Damn, why are you wasting your Time?</item>
        <item>You can Long Click to copy this Message.</item>
        <item>OMG LOOK! YOU FOUND AN EASTER EGG!?</item>
        <item>You know who else likes this Animation?</item>
        <item>MAL support? bruh.</item>
        <item>Novels? more like NO vels.</item>
        <item>Long Click the logo to check for App Update</item>
    </string-array>
    <string-array name="themes">
        <item>Default</item>
        <item>Theme 1</item>
        <item>Theme 2</item>
        <item>Theme 3</item>
        <item> Theme 4</item>
    </string-array>
    <string name="video">Video</string>
    <string name="video_info">Show Video Info</string>
    <string name="source_info">Show Source Name</string>
    <string name="video_info_info">Shows what the Resolution of the current video playing, useful for <b>\"Multi Quality\"</b> servers.</string>
    <string name="default_quality">Auto Quality Selection</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="default_quality_info">Automatically uses the closest quality provided by default, ONLY applied for \"Multi Quality\" Servers. Auto changes upon playing a video.</string>
    <string name="default_playback_speed">Default Playback Speed : %1$s</string>
    <string name="cursed_speeds">Cursed Speeds</string>
    <string name="resize_mode_button">Default Resize Mode</string>
    <string name="subtitles">Subtitles</string>
    <string name="subtitle_toggle">Subtitles</string>
    <string name="primary_sub_color_select">Subtitle Color</string>
    <string name="secondary_sub_color_select">Subtitle Outline Color</string>
    <string name="secondary_sub_outline_type_select">Subtitle Outline Type</string>
    <string name="sub_background_color_select">Subtitle Background Color</string>
    <string name="list_private">Private</string>
    <string name="accounts">Accounts</string>
</resources>