<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.mrboomdev.awery.ui.widgets.TVTabBarView
        android:id="@+id/tabs_bar"
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.mrboomdev.awery.ui.widgets.TVTabView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:state_selected="true"
            android:text="@string/anime" />

        <com.mrboomdev.awery.ui.widgets.TVTabView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library" />

    </com.mrboomdev.awery.ui.widgets.TVTabBarView>

    <androidx.cardview.widget.CardView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="42dp">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:background="@drawable/button_popup_background"
        android:foreground="@drawable/button_popup_foreground"
        android:id="@+id/search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/settings_wrapper"
        android:layout_marginRight="12dp"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_round_search_24"
        android:contentDescription="@string/search"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true" />

    <FrameLayout
        android:id="@+id/settings_wrapper"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:foreground="@drawable/button_popup_foreground"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:background="@drawable/button_popup_background"
            android:id="@+id/settings"
            tools:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_round_settings_24"
            android:contentDescription="@string/settings" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/profile_wrapper"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:cardCornerRadius="42dp">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/accounts" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>