<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <include android:id="@+id/source"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                layout="@layout/widget_dropdown" />

            <Space
                android:layout_width="6dp"
                android:layout_height="0dp" />

            <include android:id="@+id/title"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                layout="@layout/widget_dropdown" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statusWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/status_title"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="50dp">

                <include android:id="@+id/status"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    layout="@layout/widget_dropdown" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/progress"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/progress"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen|actionNext"
                    android:hint="0"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:id="@+id/progress_increment"
                android:text="+1"
                android:padding="0dp"
                android:layout_width="42dp"
                android:layout_height="52dp"
                android:layout_marginTop="-2dp"
                android:layout_marginBottom="-4dp"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoreWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/score"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/score"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen|actionNext"
                    android:hint="None"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/colorOnBackground"
                android:text="Date"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startDate"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen|actionNext"
                    android:hint="Start"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endDate"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen|actionNext"
                    android:hint="End"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/isPrivateWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/list_private"
                android:textSize="16sp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/isPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <include android:id="@+id/loadingState"
            layout="@layout/layout_loading"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />

            <Space
                android:layout_width="6dp"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>